src/styles.css
/* You can add global styles to this file, and also import other style files */

/* html,
body {
  height: 100%;
  overflow: auto;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50px;
} */

